# escola-api

./: .gitignore  pyproject.toml
escola/: admin.py  models.py  serializers.py  validators.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py  0003_alter_aluno_cpf_alter_curso_nivel_and_more.py  0004_aluno_foto.py
escola/tests/: test_aluno_serializer.py  test_api_alunos.py  tests_api_cursos.py  tests_cursos.py
setup/: settings.py  urls.py
